[package]
name = "byteorder"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["byteorder"]
tstd = ["byteorder-sgx"]

[dependencies]
byteorder-sgx        = { optional = true, tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/byteorder-sgx", package = "byteorder" }
byteorder            = { optional = true, version = "~1.4" }
