[package]
name = "http"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["http"]
tstd = ["http-sgx"]

[dependencies]
http                  = { optional = true, version = "=0.2.6" }
http-sgx              = { optional = true, tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/http-sgx", package = "http" }
