[package]
name = "net2"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["net2"]
tstd = ["net2-sgx"]

[dependencies]
net2                  = { optional = true, version = "=0.2.37" }
net2-sgx              = { optional = true, tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/net2-rs-sgx", package = "net2" }

