[package]
name = "num-bigint"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["num-bigint"]
tstd = ["num-bigint-sgx"]

[dependencies]
num-bigint-sgx        = { optional = true, tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/num-bigint-sgx", package = "num-bigint" }
num-bigint            = { optional = true, version = "0.2" }
