[package]
name = "num-traits"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["num-traits"]
tstd = ["num-traits-sgx"]

[dependencies]
num-traits-sgx        = { optional = true, tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/num-traits-sgx", package = "num-traits" }
num-traits            = { optional = true, version = "0.2" }
