[package]
edition = "2021"
name = "ssz"
version = "0.2.0"
authors = ["Parity Team <admin@parity.io>", "Wei Tang <hi@that.world>", "Paul Hauner <paul@paulhauner.com>", "Automata Team"]
description = "Simple serialization implementation"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default               = ["std"]

std                   = ["blst/std"]
tstd           = ["sgxlib/tstd", "blst/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
blst = { path = "../blst", default-features = false }

primitive-types = { version = "0.9.0", default-features = false, features = ["codec", "rlp", "scale-info"] }
typenum = { version = "1.15.0", default-features = false }
generic-array = { version = "0.14", default-features = false }
vecarray = { version = "0.1", default-features = false }
bm-le = { version = "0.11", default-features = false }
ssz-derive = { version = "0.2" }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }