[package]
name = "threadpool"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["threadpool"]
tstd = ["threadpool_sgx"]

[dependencies]
threadpool            = { optional = true, version = "1.0" }
threadpool_sgx        = { optional = true, package = "threadpool", tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-threadpool-sgx" }
