[package]
name = "webpki"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["webpki", "webpki-roots"]
tstd = ["webpki-sgx", "webpki-roots-sgx"]

[dependencies]
webpki                = { optional = true, version = "0.21.4" }
webpki-roots          = { optional = true, version = "0.19.0" }
webpki-sgx            = { optional = true, package = "webpki", branch = "mesalock_sgx", git = "https://github.com/mesalock-linux/webpki" }
webpki-roots-sgx      = { optional = true, package = "webpki-roots", branch = "mesalock_sgx", git = "https://github.com/mesalock-linux/webpki-roots" }
